portlets/proposals-portlet/src/main/webapp/css/proposals.css
/* ... */
.addprophelp {
    display: none;
}

.addpropInputContainer {
    float: right;
    font-size: 16px;
    width: 450px;
    /*padding: 5px;*/
    position: relative;
}

.addpropInputContainer .nicEdit-main {
    overflow: scroll;
    
}

#uploadWidget {
    background: url(../img/image_upload-button.png) no-repeat;
    width: 219px;
    height: 30px;
    margin-top: 12px;
    cursor: pointer;
    float: left;
}

.fileUpload input {
	opacity:0;
	filter:alpha(opacity=0); /* For IE8 and earlier */
	cursor: pointer;
	width: 219px;
	height: 30px;
	z-index: 100000;	
}

.fileUpload {
	opacity: 0;
	filter:alpha(opacity=0); /* For IE8 and earlier */
}

#uploadWidget:hover {
    background: url(../img/image_upload-button-hover.png) no-repeat;
}

.addpropform textarea {
	display: none;
}

.inputLimitContainer {
	margin-top: 5px;
	font-size: 12px;
	text-align: right;
}

table.jqplot-table-legend {
	margin-top: 320px;
}

